--- a/Server/Pages/Shared/_Layout.cshtml
+++ b/Server/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
         </nav>
     </header>
     <div class="container">
+        <partial name="_Alerts" />
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -49,6 +50,17 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+          setTimeout(() => {
+            document.querySelectorAll('.alert').forEach(a => {
+              const inst = bootstrap.Alert.getOrCreateInstance(a);
+              inst.close();
+            });
+          }, 5000);
+        });
+    </script>
+
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
