--- a/Server/Pages/Shared/_Layout.cshtml
+++ b/Server/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Games/Index">Games</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/About">About</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -61,7 +64,8 @@
         });
     </script>
 
-
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="~/js/validation-messages.js" asp-append-version="true"></script>
+    <script src="~/js/validation-bootstrap.js" asp-append-version="true"></script>
 </body>
 </html>
