--- a/Server/Pages/Auth/Register.cshtml
+++ b/Server/Pages/Auth/Register.cshtml
@@ -25,7 +25,13 @@
 
         <div class="col-md-4">
             <label asp-for="Input.Phone" class="form-label"></label>
-            <input asp-for="Input.Phone" class="form-control" required />
+            <input asp-for="Input.Phone"
+                   class="form-control"
+                   type="tel"
+                   inputmode="numeric"
+                   pattern="\d{9,10}"
+                   minlength="9"
+                   maxlength="10" />
             <span asp-validation-for="Input.Phone" class="text-danger"></span>
         </div>
 
